--- a/BukanSchool_KravMaga_Enhanced (1).html
+++ b/BukanSchool_KravMaga_Enhanced (1).html
@@ -45,19 +45,19 @@
 <section>  
     <h2>Imi Lichtenfeld</h2>  
     <p>Imi Lichtenfeld foi o criador do Krav Maga, um sistema de defesa pessoal desenvolvido para as forças de defesa de Israel. Nascido em 1910, ele utilizou sua experiência em luta e defesa para criar um método acessível e eficaz para qualquer pessoa se proteger. Combinando técnicas de boxe, luta greco-romana e outras artes marciais, ele desenvolveu um sistema que prioriza reflexos rápidos e respostas intuitivas. Seu legado continua sendo um dos pilares do treinamento de defesa ao redor do mundo.</p>  
-    <img src="imi_lichtenfeld.jpg" alt="Imi Lichtenfeld">  
+    <img src="Img/imi_lichtenfeld.jpg" alt="Imi Lichtenfeld">  
 </section>  
   
 <section>  
     <h2>Yaron Lichtenstein</h2>  
     <p>Yaron Lichtenstein foi um dos principais discípulos de Imi Lichtenfeld e responsável por preservar e difundir o Krav Maga autêntico. Treinado diretamente pelo criador do método, Yaron dedicou sua vida ao ensino e expansão da técnica ao redor do mundo. Ele fundou a Bukan School of Krav Maga, garantindo que os ensinamentos originais de Imi fossem mantidos sem alterações ou influências externas. Seu compromisso com a autenticidade tornou-se uma referência para praticantes da arte.</p>  
-    <img src="yaron_lichtenstein.jpg" alt="Yaron Lichtenstein">  
+    <img src="Img/yaron_lichtenstein.jpg" alt="Yaron Lichtenstein">  
 </section>  
   
 <section>  
     <h2>Nossos Treinamentos</h2>  
     <p>Oferecemos aulas para iniciantes e avançados, proporcionando técnicas de defesa contra diversos tipos de ameaças. As aulas são voltadas para todas as idades e condicionamentos físicos. Nosso foco é ensinar técnicas práticas que podem ser aplicadas em situações do dia a dia, garantindo segurança e confiança para nossos alunos.</p>  
-    <img src="treinamento.jpg" alt="Treinamento de Krav Maga">  
+    <img src="Img/treinamento.jpg" alt="Treinamento de Krav Maga">  
 </section>  
   
 <section>  
@@ -67,7 +67,7 @@
 </section>  
   
 <footer>  
-    <p>&copy; 2025 Bukan School of Krav Maga - Todos os direitos reservados.</p>  
+    <p>&copy; 2024 Bukan School of Krav Maga </p>  
 </footer>
 
 </body>  
